--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ requests>=2.31.0
 # Web framework for Cloud Run API
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
+websockets>=12.0
 
 # Development and testing dependencies (optional)
 pytest~=8.4.2
