feat: garden-scoped chat, irrigation fix, USDA + advisor, audio TTS/STT, weather service cleanup
- Chat por jardín: nuevo POST /api/gardens/{garden_id}/chat y WS requiere garden_id
- Deprecado chat genérico y por planta (errores 400/410)
- Arreglo riego: usar decision.plant_id y ejecutar trigger_irrigation correctamente
- Guardias TOOLS_AVAILABLE en humedad/historial/salud/tanque/clima
- CORS parametrizable (ALLOWED_ORIGINS, ALLOW_CREDENTIALS)
- Centralizado LLM: genai_utils (singleton + extract_text + extract_json)
- USDA Quick Stats: nuevos endpoints (yield, area, search) + advisor del jardín
- Advisor combina jardín + USDA + clima (si disponible)
- Audio: endpoints TTS/STT con ElevenLabs (SDK preferido + HTTP fallback)
- Weather service: versión consolidada con acentos/°C limpios
- Simulación: trigger_irrigation actualiza humedad vía simulador
- Limpieza: remoción de scripts temporales

--- a/.env.example
+++ b/.env.example
@@ -134,3 +134,16 @@ SERVICE_ACCOUNT=irrigation-service@your-project-id.iam.gserviceaccount.com
 # - Check environment loading: make env-check
 # - Test tools individually: python examples.py
 # - View logs: tail -f irrigation_agent.log
+# ============================================================================
+# AGRICULTURE DATA (USDA Quick Stats)
+# ============================================================================
+
+# API key for USDA Quick Stats API (https://quickstats.nass.usda.gov/api)
+USDA_QUICKSTATS_API_KEY=your_usda_quickstats_api_key_here
+
+
+# ============================================================================
+# AUDIO (ElevenLabs)
+# ============================================================================
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
